--- a/Hotel_Management/Properties/launchSettings.json
+++ b/Hotel_Management/Properties/launchSettings.json
@@ -13,16 +13,16 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "WeatherForecast", // Update this to your WeatherForecast endpoint
       "applicationUrl": "https://localhost:7052;http://localhost:5269",
-      "environmentVariables": {
+      "environmentVariables": {   
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "WeatherForecast", // Update this to your WeatherForecast endpoint
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
