--- a/Hotel_Management/appsettings.json
+++ b/Hotel_Management/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "PropelAug24Connection": "Data Source =DESKTOP-9KHVLG5\\SQLEXPRESS; Initial Catalog = HotelManagement; Integrated Security = True; Trusted_Connection=True;TrustServerCertificate=True"
+    "PropelAug24Connection": "Data Source =DESKTOP-27LJRR9\\SQLEXPRESS; Initial Catalog = HotelManagement; Integrated Security = True; Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
